# axon

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  SECURITY.md
apps/axon-web/: .prettierignore  Cargo.toml  README.md  buf.gen.contracts.rust.yaml  buf.gen.contracts.yaml  buf.gen.yaml  eslint.config.js  index.html  package-lock.json  package.json  playwright.browser-query-performance.config.ts  playwright.config.ts  playwright.editor-smoke.config.ts  playwright.public-gcs-live.config.ts  playwright.public-s3-live.config.ts  playwright.sdk.config.ts  playwright.worker-pool-compatibility.config.ts  sandbox.html  tsconfig.json  vite.config.ts
apps/axon-web/examples/: daxis-descriptor-resolver.ts  daxis-headless-query.ts  daxis-object-grant-adapter.ts  daxis-read-access-plan.ts
apps/axon-web/scripts/: check-config-codegen.mjs  check-contract-codegen.mjs  check-rust-contract-codegen.mjs  codegen-check.mjs  config-codegen.mjs  contract-codegen.mjs  generate-config.mjs  generate-contracts.mjs  generate-rust-contracts.mjs  verify-s3-perf-fixture.sh  verify-s3-perf-fixture.test.sh
apps/axon-web/src/: axon-browser-sdk.ts  lib.rs  main.ts  sandbox-query-child-hang-test-worker.ts  sandbox-query-child-test-harness.ts  sandbox-query-child-worker.ts  sandbox-query-coordinator-policy.test.ts  sandbox-query-coordinator-policy.ts  sandbox-query-stream-protocol.test.ts  sandbox-query-stream-protocol.ts  sandbox-query-worker-test-harness.ts  sandbox-query-worker.ts  styles.css
apps/axon-web/src/editor/: App.test.ts  App.tsx  AppProviders.test.ts  AppProviders.tsx  CatalogsPage.tsx  ConnectPage.test.ts  ConnectPage.tsx  SettingsEffects.tsx  SettingsPage.tsx  catalog-navigation.test.ts  catalog-navigation.ts  main.tsx  router.test.ts  router.ts  router.tsx
apps/axon-web/src/persistence/: handle-store.test.ts  handle-store.ts  key-value.test.ts  key-value.ts
apps/axon-web/src/query/: README.md  catalog.test.ts  catalog.ts  client.test.ts  client.ts  index.ts  keys.test.ts  keys.ts  local.test.ts  local.ts  persistence.test.ts  persistence.ts
apps/axon-web/src/services/: catalog.ts  connector-features.ts  engine.ts  execution-lifecycle.test.ts  execution-lifecycle.ts  history.ts  local-delta-session.ts  local-delta.test.ts  local-delta.ts  metadata.test.ts  metadata.ts  object-storage.ts  query-cancellation.ts  query-pagination.ts  query-runtime-state.ts  (+9 more)
apps/axon-web/tests/: axon-browser-sdk-shape.ts  axon-browser-sdk.spec.ts  browser-query-performance.spec.ts  browser-worker-matrix.spec.ts  browser-worker-pool-compatibility.spec.ts  editor-smoke.spec.ts  internal-arrow-ipc-stream.spec.ts  object-storage.spec.ts  public-gcs-live.spec.ts  public-s3-live.spec.ts  query-source.spec.ts  sandbox-page.spec.ts  worker-pool-benchmark-analysis.spec.ts  worker-pool-benchmark-analysis.ts
crates/browser-engine-worker/: Cargo.toml
crates/browser-engine-worker/src/: lib.rs
crates/browser-engine-worker/tests/: exec_contract_size_probe.rs  wasm_smoke.rs  worker_artifact.rs
crates/browser-sdk/: Cargo.toml
crates/browser-sdk/src/: lib.rs
crates/browser-sdk/tests/: ipc.rs  release_handoff_examples.rs  wasm_smoke.rs
crates/delta-control-plane/: Cargo.toml
crates/delta-control-plane/src/: lib.rs
crates/delta-control-plane/tests/: browser_http_descriptor.rs  browser_snapshot_preflight.rs  native_handoff.rs  resolve_snapshot.rs
crates/delta-runtime-support/: Cargo.toml
crates/delta-runtime-support/src/: lib.rs
crates/native-query-runtime/: Cargo.toml
crates/native-query-runtime/src/: lib.rs
crates/native-query-runtime/tests/: native_runtime.rs
crates/wasm-datafusion-planner-poc/: Cargo.toml
crates/wasm-datafusion-planner-poc/src/: lib.rs
crates/wasm-datafusion-planner-poc/tests/: feature_surfaces.rs  guardrails.rs  logical_plan.rs  wasm_smoke.rs
crates/wasm-datafusion-poc/: Cargo.toml
crates/wasm-datafusion-poc/src/: ipc_cursor.rs  lib.rs
crates/wasm-datafusion-poc/tests/: arrow_ipc_export.rs  custom_scan_exec.rs  daxis_budget_profile.rs  daxis_query_corpus.rs  daxis_runtime_isolation_plan.rs  delta_descriptor.rs  delta_table_provider.rs  guardrails.rs  ipc_cursor.rs  memtable_query.rs  parquet_scan_exec.rs  query_budgets.rs  runtime_sql_corpus.rs  scan_pushdown.rs  wasm_smoke.rs
crates/wasm-datafusion-session/: Cargo.toml
crates/wasm-datafusion-session/src/: lib.rs
crates/wasm-datafusion-session/tests/: parquet_dataset.rs
crates/wasm-delta-snapshot/: Cargo.toml
crates/wasm-delta-snapshot/src/: lib.rs
crates/wasm-delta-snapshot/tests/: checkpoints.rs  compatibility.rs  http_storage.rs  replay.rs  wasm_smoke.rs
crates/wasm-http-object-store/: Cargo.toml
crates/wasm-http-object-store/src/: lib.rs
crates/wasm-http-object-store/tests/: brokered_object_store.rs  extent_cache.rs  http_range_reader.rs  local_file.rs  persistent_cache.rs  wasm_smoke.rs
crates/wasm-parquet-engine/: Cargo.toml
crates/wasm-parquet-engine/src/: lib.rs
crates/wasm-parquet-engine/tests/: metadata.rs  scan.rs  streaming.rs  wasm_smoke.rs
crates/wasm-query-runtime/: Cargo.toml
crates/wasm-query-runtime/src/: datafusion_planner_poc.rs  execution.rs  lib.rs  lowering.rs  parquet_support.rs
crates/wasm-query-runtime/tests/: browser_runtime.rs  datafusion_lowering.rs  datafusion_lowering_corpus.rs  wasm_smoke.rs
crates/wasm-query-session/: Cargo.toml
crates/wasm-query-session/src/: lib.rs
crates/wasm-query-session/tests/: session.rs
examples/browser-delta-sandbox/: .prettierignore  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.editor-smoke.config.ts  sandbox.html  tsconfig.json  vite.config.ts
examples/browser-delta-sandbox/src/: axon-browser-sdk.ts  lib.rs  main.ts  sandbox-query-worker.ts  styles.css
examples/browser-delta-sandbox/tests/: axon-browser-sdk-shape.ts  axon-browser-sdk.spec.ts  browser-delta-sandbox.spec.ts  browser-worker-matrix.spec.ts  editor-smoke.spec.ts
poc/upstream-wasm-fork-stack/browser-harness/: Cargo.toml
poc/upstream-wasm-fork-stack/fixture-generator/: Cargo.toml
(+357 files in other folders)
