[workspace]
members = [
  "crates/browser-engine-worker",
  "crates/browser-sdk",
  "crates/delta-control-plane",
  "crates/delta-runtime-support",
  "crates/native-query-runtime",
  "crates/query-contract",
  "crates/query-router",
  "crates/udf-abi",
  "crates/udf-host-wasi",
  "crates/wasm-http-object-store",
  "crates/wasm-datafusion-poc",
  "crates/wasm-parquet-engine",
  "crates/wasm-delta-snapshot",
  "crates/wasm-query-session",
  "crates/wasm-query-runtime",
  "examples/browser-delta-sandbox",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
