[package]
name = "axon-web-wasm"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
fixture-generator = [
  "dep:deltalake",
  "dep:tokio",
]

[[bin]]
name = "generate-prod-fixture"
path = "src/bin/generate_prod_fixture.rs"
required-features = ["fixture-generator"]

[dependencies]
arrow-array = "=57.3.0"
arrow-ipc = "=57.3.0"
arrow-schema = "=57.3.0"
js-sys = "=0.3.91"
query-contract = { path = "../../crates/query-contract" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"
wasm-datafusion-session = { path = "../../crates/wasm-datafusion-session" }
wasm-delta-snapshot = { path = "../../crates/wasm-delta-snapshot" }
wasm-http-object-store = { path = "../../crates/wasm-http-object-store" }
wasm-parquet-engine = { path = "../../crates/wasm-parquet-engine" }
wasm-query-runtime = { path = "../../crates/wasm-query-runtime" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deltalake = { version = "=0.31.1", features = ["datafusion"], optional = true }
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread"], optional = true }
