[package]
name = "browser-engine-worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
browser-sdk = { path = "../browser-sdk" }
js-sys = "=0.3.91"
query-contract = { path = "../query-contract" }
serde.workspace = true
serde_json.workspace = true
wasm-query-session = { path = "../wasm-query-session" }
wasm-query-runtime = { path = "../wasm-query-runtime" }

[dev-dependencies]
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.64"
