[package]
name = "browser-engine-worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
exec-contract-size-probe = ["dep:axon-contract-proto", "dep:buffa"]

[dependencies]
axon-contract-proto = { path = "../contract-proto", optional = true }
browser-sdk = { path = "../browser-sdk" }
buffa = { version = "=0.8.1", optional = true }
js-sys = "=0.3.91"
query-contract = { path = "../query-contract" }
serde.workspace = true
serde_json.workspace = true
wasm-query-session = { path = "../wasm-query-session" }
wasm-query-runtime = { path = "../wasm-query-runtime" }

[dev-dependencies]
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "=1.52.3", features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.64"
