[package]
name = "browser-sdk"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes = { version = "=1.11.1", features = ["serde"] }
query-contract = { path = "../query-contract" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.64"
