[package]
name = "delta-control-plane"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
deltalake = { version = "=0.31.1", features = ["gcs"] }
delta-runtime-support = { path = "../delta-runtime-support", default-features = false }
query-contract = { path = "../query-contract" }

[dev-dependencies]
native-query-runtime = { path = "../native-query-runtime" }
tempfile = "=3.27.0"
tokio = { version = "=1.50.0", features = ["rt-multi-thread"] }
