[package]
name = "delta-control-plane"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
deltalake = { version = "=0.32.4", features = ["gcs"] }
delta-runtime-support = { path = "../delta-runtime-support", default-features = false }
query-contract = { path = "../query-contract" }

[dev-dependencies]
browser-sdk = { path = "../browser-sdk" }
native-query-runtime = { path = "../native-query-runtime" }
serde_json.workspace = true
tempfile = "=3.27.0"
tokio = { version = "=1.52.3", features = ["rt-multi-thread"] }
wasm-query-runtime = { path = "../wasm-query-runtime" }
