[package]
name = "delta-runtime-support"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
deltalake = { version = "=0.31.1", features = ["gcs"] }
query-contract = { path = "../query-contract" }
tokio = { version = "=1.50.0", features = ["rt-multi-thread"] }
url = "=2.5.8"

[dev-dependencies]
tempfile = "=3.27.0"
