[package]
name = "delta-runtime-support"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["datafusion"]
datafusion = ["deltalake/datafusion"]

[dependencies]
deltalake = { version = "=0.32.4", features = ["gcs"] }
query-contract = { path = "../query-contract" }
tokio = { version = "=1.52.3", features = ["rt-multi-thread"] }
url = "=2.5.8"

[dev-dependencies]
serde_json.workspace = true
tempfile = "=3.27.0"
