[package]
name = "native-query-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
deltalake = { version = "=0.32.4", features = ["datafusion", "gcs"] }
delta-runtime-support = { path = "../delta-runtime-support", default-features = false, features = ["datafusion"] }
query-contract = { path = "../query-contract" }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tempfile = "=3.27.0"
tokio = { version = "=1.52.3", features = ["rt-multi-thread"] }
