[package]
name = "wasm-datafusion-planner-poc"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
optimizer = ["dep:datafusion-optimizer"]
physical-expr-floor = ["dep:datafusion-physical-expr"]
physical-plan-floor = ["dep:datafusion-physical-plan", "dep:uuid"]

[dependencies]
arrow-schema = "=58.3.0"
datafusion-common = { version = "=53.1.0", default-features = false, features = ["sql"] }
datafusion-expr = { version = "=53.1.0", default-features = false, features = ["sql"] }
datafusion-optimizer = { version = "=53.1.0", default-features = false, optional = true }
datafusion-physical-expr = { version = "=53.1.0", default-features = false, optional = true }
datafusion-physical-plan = { version = "=53.1.0", default-features = false, optional = true }
datafusion-sql = { version = "=53.1.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.3.4", features = ["wasm_js"] }
uuid = { version = "=1.23.0", default-features = false, features = ["js"], optional = true }
wasm-bindgen = "=0.2.114"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.64"
