[package]
name = "wasm-datafusion-poc"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow-array = "=57.3.0"
arrow-ipc = "=57.3.0"
arrow-schema = "=57.3.0"
bytes = "=1.11.1"
datafusion = { version = "=52.4.0", default-features = false, features = ["sql"] }
futures-util = "=0.3.32"
query-contract = { path = "../query-contract" }
wasm-http-object-store = { path = "../wasm-http-object-store" }
wasm-parquet-engine = { path = "../wasm-parquet-engine" }

[dev-dependencies]
parquet = { version = "=57.3.0", default-features = false }
serde_json.workspace = true
wasm-delta-snapshot = { path = "../wasm-delta-snapshot" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "=0.4.44", features = ["wasmbind"] }
getrandom = { version = "=0.3.4", features = ["wasm_js"] }
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.64"
