[package]
name = "wasm-delta-snapshot"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = "=0.1.89"
bytes = "=1.11.1"
parquet = { version = "=57.3.0", default-features = false }
query-contract = { path = "../query-contract" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
arrow-array = "=57.3.0"
arrow-schema = "=57.3.0"
delta-control-plane = { path = "../delta-control-plane" }
deltalake = { version = "=0.31.1", features = ["datafusion", "gcs"] }
tempfile = "=3.27.0"
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread"] }
