[package]
name = "wasm-http-object-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes = "=1.11.1"
query-contract = { path = "../query-contract" }
reqwest = { version = "=0.12.28", default-features = false }

[dev-dependencies]
tokio = { version = "=1.50.0", features = ["rt-multi-thread"] }
