[package]
name = "wasm-http-object-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes = "=1.11.1"
query-contract = { path = "../query-contract" }
reqwest = { version = "=0.12.28", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { version = "=1.50.0", features = ["macros", "rt"] }
wasm-bindgen-test = "=0.3.64"
