[package]
name = "wasm-http-object-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes = "=1.11.1"
query-contract = { path = "../query-contract" }
reqwest = { version = "=0.12.28", default-features = false }
sha2 = "=0.10.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "=0.3.91"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"
web-sys = { version = "=0.3.91", features = ["Blob"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { version = "=1.50.0", features = ["macros", "rt"] }
wasm-bindgen-test = "=0.3.64"
