[package]
name = "wasm-parquet-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
arrow-array = "=57.3.0"
arrow-schema = "=57.3.0"
bytes = "=1.11.1"
futures-util = "=0.3.32"
parquet = { version = "=57.3.0", default-features = false, features = ["arrow", "async"] }
query-contract = { path = "../query-contract" }
wasm-http-object-store = { path = "../wasm-http-object-store" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "=0.4.64"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.64"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread", "time"] }
