[package]
name = "wasm-query-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
query-contract = { path = "../query-contract" }
reqwest = { version = "=0.12.28", default-features = false }
wasm-http-object-store = { path = "../wasm-http-object-store" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "=1.50.0", features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.64"
