[package]
name = "wasm-query-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
datafusion-planner-poc = [
    "dep:datafusion-common",
    "dep:datafusion-expr",
    "dep:datafusion-sql",
    "dep:getrandom",
]

[dependencies]
arrow-array = "=58.3.0"
arrow-ipc = "=58.3.0"
arrow-schema = "=58.3.0"
bytes = "=1.11.1"
datafusion-common = { version = "=53.1.0", default-features = false, features = ["sql"], optional = true }
datafusion-expr = { version = "=53.1.0", default-features = false, features = ["sql"], optional = true }
datafusion-sql = { version = "=53.1.0", default-features = false, optional = true }
futures-timer = { version = "=3.0.3", features = ["wasm-bindgen"] }
futures-util = "=0.3.32"
parquet = { version = "=58.3.0", default-features = false }
query-contract = { path = "../query-contract" }
reqwest = { version = "=0.12.28", default-features = false }
serde_json.workspace = true
sqlparser = "=0.61.0"
wasm-delta-snapshot = { path = "../wasm-delta-snapshot" }
wasm-http-object-store = { path = "../wasm-http-object-store" }
wasm-parquet-engine = { path = "../wasm-parquet-engine" }

[dev-dependencies]
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
deltalake = { version = "=0.32.4", features = ["datafusion", "gcs"] }
tempfile = "=3.27.0"
tokio = { version = "=1.52.3", features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.3.4", features = ["wasm_js"], optional = true }
js-sys = "=0.3.91"
wasm-bindgen = "=0.2.114"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.64"
