[package]
name = "browser-delta-sandbox"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
fixture-generator = [
  "dep:arrow-array",
  "dep:arrow-schema",
  "dep:deltalake",
  "dep:tokio",
]

[[bin]]
name = "generate-prod-fixture"
path = "src/bin/generate_prod_fixture.rs"
required-features = ["fixture-generator"]

[dependencies]
query-contract = { path = "../../crates/query-contract" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"
wasm-delta-snapshot = { path = "../../crates/wasm-delta-snapshot" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arrow-array = { version = "=57.3.0", optional = true }
arrow-schema = { version = "=57.3.0", optional = true }
deltalake = { version = "=0.31.1", features = ["datafusion"], optional = true }
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread"], optional = true }
